--- a/hello.html
+++ b/hello.html
@@ -6,8 +6,8 @@
     <title>Hello</title>
 </head>
 <body>
-    <h1>This is My Website!</h1>
-    <h2 style:"color:blue;">Hello</h2>
+    <h1 style:"color:blue;">This is My Website!</h1>
+    <h2>Hello</h2>
     Hello world!
 </body>
 </html>
